vertical contact plot data: init

--- a/notebooks/geophysical_surveys/MT_Survey/MT_survey_Vertical_contact.ipynb
+++ b/notebooks/geophysical_surveys/MT_Survey/MT_survey_Vertical_contact.ipynb
@@ -356,7 +356,11 @@
      "output_type": "stream",
      "text": [
       "Starting calculating field solution at 2016-12-21 18:19:55\n",
-      "Starting work for 1.000e+02\n"
+      "Starting work for 1.000e+02\n",
+      "Ran for 184.384000 seconds\n",
+      "Starting work for 1.778e+02\n",
+      "Ran for 196.522000 seconds\n",
+      "Starting work for 3.162e+02\n"
      ]
     }
    ],
