Updates to the notebooks

--- a/notebooks/geophysical_surveys/MT_Survey/MT_survey_LayeredModels.ipynb
+++ b/notebooks/geophysical_surveys/MT_Survey/MT_survey_LayeredModels.ipynb
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1091,7 +1091,7 @@
     "# Pickle the data\n",
     "mtData.survey.unpair()\n",
     "\n",
-    "dill.dump(mtData,open('sphere_mtData.pklb','wb'))"
+    "dill.dump(mtData,open('layer_mtData.pklb','wb'))"
    ]
   },
   {
@@ -2791,8 +2791,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -2806,7 +2807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
